data/derived/fa15/progs/unify/prog2763.ml.out
Characters 29-35:
  let fixpoint (f,b) = wwhile (fu f b,b);;
                               ^^^^^^
Error: This expression has type ('a -> 'a) * bool
       but an expression was expected of type 'b -> 'b * bool
